                       User-Visible WebAuth Changes

WebAuth 4.1.1 (unreleased)

    Fix the sample confirm template to properly suppress the history and
    token rights sections when there are no entries in the corresponding
    arrays.  Thanks, Sam Morris.

    Add explicit HTML filters to all interpolated variables in the
    sample WebLogin templates.  Previous versions of the sample templates
    (since the conversion to Template Toolkit in 4.0) did not uniformly
    apply the HTML filter, which could cause rendering problems or even
    cross-site scripting vulnerabilities in some corner cases.  For most
    attributes missing this filter there was no chance of HTML special
    characters, but now the filter is applied uniformly for consistency.
    Sites with custom templates should check their templates for any
    instance of a variable interpolation ([% variable %]) and ensure that
    the HTML filter is applied ([% variable FILTER html %] instead).

    Update the generated HTML version of the mod_webkdc manual to include
    the new directives introduced in WebAuth 4.1.0.

WebAuth 4.1.0 (2012-03-15)

    Add new mod_webkdc configuration option WebKdcUserInfoTimeout, which
    sets the network timeout used for user information service queries and
    multifactor authentications.  The default timeout is 30 seconds.
    Timeout support requires compiling with remctl 3.1 or later.

    Add new mod_webkdc configuration option WebKdcUserInfoIgnoreFail,
    which if set tells mod_webkdc to not fail the login if a user
    information service is configured but cannot be queried (either due to
    timeout or due to some other error).  By default, all logins will be
    rejected if a user information service is configured but returns an
    error.  If this option is set, the login can proceed, but only a
    password factor will be available and no level of assurance can be
    set.  Be aware that setting this option may allow bypassing a